# RDtask

./: CMakeLists.txt  CustomButton.qml  FileHandler.cpp  FileHandler.h  Main.qml  README.md  Resources used.txt  main.cpp
